--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,7 @@
                                     <resource>META-INF/spring.schemas</resource>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass></mainClass>
+                                    <mainClass>com.KBP.Evidence.main.KBPEvidence</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -184,6 +184,15 @@
                 <configuration>
                     <mainClass></mainClass>
                     <cleanupDaemonThreads>false</cleanupDaemonThreads>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
         </plugins>
